memory params