@@ -1,3 +1,3 @@
 #!/bin/sh
 
-JAVA_OPTS="-Xms1024m -Xmx8g -XX:MaxPermSize=512m -Dfile.encoding=UTF-8 $JAVA_OPTS"
+JAVA_OPTS="%app_mem_params% $JAVA_OPTS"
